CodingDojo/server/src/main/webapp/resources/css/dojo.css
/*-
 * #%L
 * Codenjoy - it's a dojo-like platform from developers to developers.
 * %%
 * Copyright (C) 2018 Codenjoy
 * %%
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>.
 * #L%
 */

body, input, textarea {
    color: black !important;
}

body {
    margin: 10px;
}

.main-page li {
    margin-left: 25px;
}

.table-striped>tbody>tr:nth-of-type(odd) {
    background-color: #dededead !important;
}

.table>tbody>tr>td {
    border-top: 0px !important;
}

#settings {
    display: none;
}

.score-info {
    color:yellow;
    text-shadow: 6px 6px 10px black, 4px 4px 4px red;
    font-size:90px;
    display:none;
    line-height:0.8;
}

.width-calculator{
    position: absolute;
    visibility: hidden;
    height: auto;
    width: auto;
    white-space:nowrap;
}

#table-logs th.center, #table-logs td.center  {
    text-align : center;
}

#table-logs {
    font-size:25px;
}

label.error {
    color:red;
    position:absolute;
    border: 1px solid gray;
    background-color: white;
    border-radius: 3px 3px 3px 3px;
}

#selectedLevels {
    width:300px;
}

.admin-table {
    background-color: papayawhip;
    margin:10px;
    font-family: monospace;
    font-size: 14px;
}

.admin-table .info {
    font-size: 11px;
    line-height: 10px;
}

.admin-table .info td {
    padding: 10px;
}

.admin-table .info textarea {
    font-size: 12px;
    line-height: 12px
}


.admin-table .rightStep {
    padding-right: 20px;
}

.admin-table .bold-room-true {
    font-weight: bold;
    font-size: 18px;
}

.admin-table .bold-room-false {
    /* do nothing */
}

span.pow {
    vertical-align: 7px;
    font-size: 10px;
}

.score-header {
    white-space: nowrap;
}

.admin-table input[type="text"] {
    width:150px;
    height:24px;
}

.admin-table td {
    vertical-align: middle;
}

.admin-table textarea.map {
    line-height: 0.6em;
    overflow-y: hidden;
    height: 80px;
    width: 300px;
}

.admin-table input[readonly="true"] {
    background-color: papayawhip;
}

.admin-table .input-score {
    width:50px !important;
}

.admin-table .input-callback {
    width:90px !important;
}

.admin-table .input-room {
    width:90px !important;
}

.admin-table .input-team {
    width:50px !important;
}

.admin-table .player-save {
    width: 300px!important;
    font-size: 12px;
}

.admin-table input[type="checkbox"] {
    width: 24px;
    height: 24px;
    vertical-align: middle;
}

.admin-table select {
    width:150px;
    height:24px;
}

#joystick {
    display : none;
}

#joystick td {
    width : 30px;
    height : 30px;
    text-align:center;
}

.joystick_act_params {
    width: 55px;
    height: 20px;
}

.board {
    width: 400px;
    padding-right: 75px;
    padding-top: 25px;
    position: absolute;
    right: 0px;
}

.chat .messages-container {
    overflow-y: auto;
    height: 70vh;
}

.chat .delete-message {
    cursor: pointer;
}

.chat .message-author {
    font-size: 14px;
    font-weight: bold;
    font-family: monospace;
}

.chat .message-time {
    font-size: 12px;
    font-family: monospace;
    color: grey;
}

.chat .message-text {
    font-family: sans-serif;
    font-size: 13px;
    margin-left: 18px;
    overflow-wrap: break-word;
}

.chat .chat-message:nth-child(even) {
    background-color: #fff9f6;
}

#leaderboard label:hover {
    text-decoration: underline;
    background-color: bisque;
}

#leaderboard label {
    color: #428bca;
    text-decoration: none;
    font-size: 25px;
    padding: 2px 21px 4px 21px;
    background-color: aliceblue;
    font-weight: normal;
}

#leaderboard .tv-content {
    display: none;
}

#leaderboard .tv-radio {
    display: none;
}

#leaderboard #chat-tab {
    display: none;
}

#leaderboard .tv-radio:checked + .tv-content {
    display: block;
}

#leaderboard .tv-tab {
    display: inline-block;
    cursor: pointer;
}

#leaderboard ul {
    list-style-type: binary;
}

#leaderboard .post-message-button {
    text-align: right;
}

#leaderboard .message-area textarea {
    margin: 0px;
    width: 100%;
    height: 55px;
}

#leaderboard .team-pow {
    vertical-align: 12px;
    font-size: 11px;
}

#leaderboard .small-round {
    font-size: 18px;
}

#leaderboard .smaller-round {
    font-size: 10px;
}

#leaderboard .inline {
    display: inline-flex;
}

.glasses {
    width: calc(100% - 530px);
    float: left;
    padding-left: 20px;
    position: absolute;
}

#want-donate {
    line-height: 34px;
}

#donate-container input[type=text]{
    width: 55px;
}

#donate-container select{
    width: 70px;
}

#donate {
    text-align: center;
    position: absolute;
    left: 300px;
    top: 20px;
}

#donate-container {
    background-color: white;
}

#want-donate {
    font-size: 25px;
}

#game {
    width: 210px;
    height: 27px;
}

#advertisement {
    width:500px;
}

#advertisement img {
    width: 200px;
}

.player-canvas {
    float: left;
}

canvas {
    border: 1px solid;
}

/* rule page */
.hfeed {
    max-width: 800px;
    margin: 4em auto;
}

.hfeed p {
    margin-bottom: 1.625em;
}

.hfeed pre {
    background: none repeat scroll 0% 0% rgb(244, 244, 244);
    font: 13px/1.5 "Courier 10 Pitch",Courier,monospace;
    margin-bottom: 1.625em;
    overflow: auto;
    padding: 0.75em 1.625em;
}

.logout-link {
    display: inline;
    position: relative;
    float: right;
    margin-right: 150px;
    z-index: 100;
    font-size: 20px;
}

span.a {
    color: #428bca;
    text-decoration: none;
    cursor: pointer;
}

span.a:hover,
span.a:focus {
    color: #2a6496;
    text-decoration: underline;
}

td.joystick {
    white-space: nowrap;
    letter-spacing: -3px;
}

